--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NB WEBSITE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MY RESUME</title>
 </head>
 <body>
-<h2>NB PORTFOLIO</h2>
-<h2>WEB DEVELOPER!!</h2>
-<hr/>
-<h3><a href="./public/movie-ranking.html"> MOVIE RANKING WEBSITE</a></h3>
-<img src="./assets/images/movie-ranking.png" height="200" alt="movie" />
-<br/>
-<h3><a href="./public/birthday-invite.html">BIRTHDAY-INVITE PROJECT</a></h3>
-<img src="./assets/images/birthday-invite.png" height="200" alt="birthday" />
-<hr/>
-<a href="./public/about.html"> About me!</a>
-<a href="./public/contact.html"> Contact me!</a>
+    <h1>I am Navabharathi</h1>
+    <img src="./photo.jpeg"  height="150"/>
+    <hr/>
+    <h2> About me</h2>
+    <p>I excel in fast-paced and challenging environments.<br/> 
+    </p>
+    <hr/>
+    <h2>Education</h2>
+    <h3>SSLC</h3>
+    <ul>
+        <li>Gandhi Matric Hr.sec school, Namakkal</li>
+        2017-2019
+    </ul>
+    <h3>HSC</h3>
+    <ul>
+        <li>Gandhi Matric Hr.sec school, Namakkal</li>
+        2019-2021
+    </ul>
+    <h2>Skills</h2>
+    <ul>
+        <li>Html</li>
+        <li>Css</li>
+        <li>C programming</li>
+        <li>Java</li>
+        <li>Video editing</li>
+    </ul>
+    <a href="./contact.html"> Contact me</a>
+    <footer>
+        <p>© NB. All rights reserved.</p>
+    </footer>
 </body>
 </html>
